# whisper-subtitle-cli

./: .gitignore  CLAUDE.md  INSTALL.md  README.md  config.json  main.py  pyproject.toml
plan/finished/: PLAN-action-flag.md  PLAN-configurable-auto-unload.md  PLAN-fix-subtitle-lang-codes.md  PLAN-preview-subtitle-flags.md  PLAN-two-phase-preview.md
src/: transcriber.py  translator.py  video_downloader.py
tests/: test_main_integration.py  test_preview_opt.py  test_preview_subtitle_flags.py  test_subtitle_download.py  test_transcriber.py  test_translator.py  test_video_downloader.py
