[project]
name = "whisper-subtitle-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.0.0",
    "ffmpeg-python>=0.2.0",
    "click>=8.1.7",
    "yt-dlp>=2024.1.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
mlx = ["mlx-whisper>=0.4.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
