[project]
name = "whisper-subtitle-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Linux/macOS: use standard PyPI torch (CUDA included on Linux)
    "torch; sys_platform != 'win32'",
    # Windows default: CUDA 12.1 (requires driver >= 525)
    # torch 2.5.1 is stable with Whisper (newer versions have compatibility issues)
    "torch==2.5.1+cu121; sys_platform == 'win32'",
    "openai-whisper>=20231117",
    "ffmpeg-python>=0.2.0",
    "click>=8.1.7",
    "yt-dlp>=2026.1.31",
    "requests>=2.32.5",
]

[project.optional-dependencies]
mlx = ["mlx-whisper>=0.4.0"]  # Apple Silicon
stable = ["stable-ts>=2.0.0"]  # Better timestamp accuracy (VAD uses silero via torch)

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Windows CUDA: PyTorch wheel index (contains all CUDA versions)
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl"
explicit = true

[tool.uv.sources]
# On Windows, use PyTorch's wheel index to get CUDA-enabled builds
torch = { index = "pytorch", marker = "sys_platform == 'win32'" }

[tool.pyright]
include = ["src", "main.py", "tests"]
exclude = [".venv", "**/__pycache__"]
venvPath = "."
venv = ".venv"
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
reportMissingImports = "none"           # mlx_whisper is optional
reportArgumentType = "warning"          # demote to warning (many false positives from untyped libs)
reportGeneralTypeIssues = "warning"     # isinstance(x, any) pattern
reportAttributeAccessIssue = "warning"  # stable_whisper API
